--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.4",
-    "@mui/material": "^5.16.7",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/material": "^5.16.4",
     "date-fns": "^3.6.0",
     "microcms-js-sdk": "^3.1.2",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "style-components": "^0.1.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
